[package]
name = "poker_eden"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["poker_eden_client", "poker_eden_core", "poker_eden_server"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"

[dependencies]
