[package]
name = "poker_eden_client"
version = "0.1.0"
edition = "2024"

[dependencies]
poker_eden_core = { path = "../poker_eden_core" }

tokio = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
serde_json = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2.5"
rand = { workspace = true }
crossterm = "0.29"
tui = "0.19"
uuid = { workspace = true }
