[package]
name = "poker_eden_client"
version = "0.1.0"
edition = "2024"
authors = ["Peilin Fan <peilin.fan@foxmail.com>"]
license = "GPL-3"

[dependencies]
poker_eden_core = { path = "../poker_eden_core" }

tokio = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
serde_json = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2.5"
crossterm = "0.29"
tui = "0.19"
uuid = { workspace = true }
